# 2048

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Core.cpp  Core.h  app.cc  app.h  game.cc  game.h  game_renderer.cc  game_renderer.h  grid.cc  grid.h  layout.cc  layout.h  main.cpp  style.h  utils.cc  utils.h
tests/: CMakeLists.txt  Core.cc  game_test.cc  grid_test.cc
